--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div class="row gy-4 justify-content-between">
           <div class="col-lg-4 profile-img align-self-start">
-            <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/VIML1450.JPG" class="img-fluid"
+            <img src="/assets/img/VIML1450.JPG" class="img-fluid"
               alt="">
           </div>
           <div class="col-lg-7 content">
