--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Project">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%2090.jpg"
+                <img src="assets/img/portfolio/Group%2090.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Access flow</h4>
@@ -260,7 +260,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Project">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%2015.jpg"
+                <img src="assets/img/portfolio/Group%2015.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Music app</h4>
@@ -277,7 +277,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%2092.jpg"
+                <img src="assets/img/portfolio/Group%2092.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Foodgo</h4>
@@ -298,7 +298,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%20156.jpg"
+                <img src="assets/img/portfolio/Group%20156.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>BOTTLE</h4>
@@ -315,7 +315,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%2011.jpg"
+                <img src="assets/img/portfolio/Group%2011.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Restaurante Vegan</h4>
@@ -332,7 +332,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/web.jpg"
+                <img src="assets/img/portfolio/web.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Web Design</h4>
@@ -349,7 +349,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%2051.jpg"
+                <img src="assets/img/portfolio/Group%2051.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sale Man</h4>
@@ -366,7 +366,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%2060.jpg"
+                <img src="assets/img/portfolio/Group%2060.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Travel Website</h4>
@@ -384,7 +384,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/portfolio/Group%201000006540.jpg"
+                <img src="assets/img/portfolio/Group%201000006540.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Parking App Design</h4>
