--- a/index.html
+++ b/index.html
@@ -384,17 +384,18 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
+                <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book"
+                    class="glightbox preview-link">
                 <img src="assets/img/portfolio/Group%201000006540.jpg"
                   class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Parking App Design</h4>
                   <p>Users can view available parking spaces in real-time, ensuring they find a spot quickly.</p>
-                  <a href="https://www.figma.com/design/C8SQo41nPcXxl2oGggiYBy/Parking-App-Design?node-id=201-1100&t=lt9duGCvqbnCAee5-1"
-                    title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
-                      class="bi bi-zoom-in"></i></a>
+                 
                   <a href="https://www.figma.com/design/C8SQo41nPcXxl2oGggiYBy/Parking-App-Design?node-id=201-1100&t=lt9duGCvqbnCAee5-1"
                     title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
+                </a>>
               </div>
             </div><!-- End Portfolio Item -->
 
