--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Project">
+               <a href="https://www.figma.com/design/VFIPE33WSXTzcRbB9va7bF/Access-flow?node-id=323-350&t=VfB7qI6v9c3wlsM2-1"
+                    title="App 1" class="glightbox preview-link">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/Group%2090.jpg"
                   class="img-fluid" alt="">
@@ -255,7 +257,7 @@
                   <a href="https://www.figma.com/design/VFIPE33WSXTzcRbB9va7bF/Access-flow?node-id=323-350&t=VfB7qI6v9c3wlsM2-1"
                     title="" class=""><i class=""></i></a>
                 </div>
-              </div>
+              </div></a>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Project">
