--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Folio Bootstrap Template</title>
+  <title>protfolio</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -55,7 +55,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
+<!--             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
                     class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -73,7 +73,7 @@
             </ul>
           </li> -->
           <li><a href="#contact">Contact</a></li>
-        </ul>
+        </ul> -->
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
@@ -91,7 +91,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Harikrishnan <br></h2>
-        <p>I'm <span class="typed" data-typed-items="UI Designer, Web Designer,Developer ">UI/UX Designer & Web
+        <p>I'm <span class="typed" data-typed-items="UI Designer,UX Designer,Web Designer,Developer ">UI/UX Designer & Web
             Designer</span></p>
         <div class="social-links">
           <a href="#"><i class="bi bi-twitter-x"></i></a>
