--- a/service-details.html
+++ b/service-details.html
@@ -132,9 +132,9 @@
 
           </div>
 
-          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/images%20(1).jfif" alt=""
-              class="img-fluid services-img">
+         <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
+            <!-- <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/images%20(1).jfif" alt=""
+              class="img-fluid services-img"> -->
 
             <!-- <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
           <p>
