--- a/service-details.html
+++ b/service-details.html
@@ -133,8 +133,7 @@
           </div>
 
          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <!-- <img src="file:///C:/Users/WSSPC-004/Downloads/Folio/Folio/assets/img/images%20(1).jfif" alt=""
-              class="img-fluid services-img"> -->
+              <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
 
             <!-- <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
           <p>
