--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Harikrishnan <br></h2>
-        <p>I'm <span class="typed" data-typed-items="UI Designer,UX Designer,Web Designer,Developer ">UI/UX Designer & Web
+        <p>I'm <span class="typed" data-typed-items="UI Designer,UX Designer,Web Designer,Web Developer ">UI/UX Designer & Web
             Designer</span></p>
         <div class="social-links">
           <a href="#"><i class="bi bi-twitter-x"></i></a>
