--- a/service-details.html
+++ b/service-details.html
@@ -133,15 +133,18 @@
           </div>
 
          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-               <!-- <img src="assets/img/services.jpg" alt="" class="img-fluid services-img"> -->
+            <img src="assets/img/banner-sd.jpg" alt=""
+              class="img-fluid services-img">
 
-            <!-- <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-          <p>
-            Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque
-            consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui
-            omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-          </p>
-          <ul>
+            <h3>Our Expertise</h3>
+            <p>
+              " We provide a comprehensive range of digital services, including innovative web design that
+              brings brands to life, seamless web development that ensures functionality and performance,
+              and intuitive UI interfaces designed for ease of use. Our UX services prioritize the user journey,
+              delivering engaging experiences that resonate with your audience. Whether it's creating visually
+              stunning websites or crafting user-centered digital products, we deliver solutions that meet your goals."
+            </p>
+            <!-- <ul>
             <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
             <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span>
             </li>
@@ -157,7 +160,7 @@
             velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum.
             Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto
             ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-          </p> -->
+          </p>  -->
           </div>
 
         </div>
