--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section id="hero" class="hero section dark-background">
 
       <img
-        src="https://us.123rf.com/450wm/d8nn/d8nn2201/d8nn220100386/180326694-modern-black-workspace-with-a-copy-space-for-product-display-digital-devices-and-supplies-top-view.jpg"
+        src="D:\Folio-20240927T161430Z-001\Folio\snapedit_1727710989865.jpg.jpeg"
         alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
