--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
     <section id="hero" class="hero section dark-background">
 
-      <img
-        src="D:\Folio-20240927T161430Z-001\Folio\snapedit_1727710989865.jpg.jpeg"
+      <img src="assets/img/background.jpeg"
         alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
