--- a/index.html
+++ b/index.html
@@ -103,10 +103,13 @@
           </div>
           <div class="col-lg-7 content">
             <h2>About Me</h2>
-            <p>I am proficient in leading design tools such as Adobe XD, Sketch, and Figma. With a dedication
-              to ongoing learning, I explore innovative techniques to stay at the forefront of UI/UX trends.
-              My mission is to create seamless user experiences that align with clients' goals, enhancing
-              website usability and crafting intuitive mobile app interfaces.</p>
+            <p>I am proficient in leading design tools such as Adobe XD, Sketch, and Figma, with a 
+              dedication to ongoing learning. I explore innovative techniques to stay at the 
+              forefront of UI/UX trends. Specializing in crafting immersive digital experiences, 
+              I seamlessly integrate front-end development using HTML, CSS, and JavaScript. I design 
+              interfaces that captivate and delight users, ensuring seamless interactions across 
+              platforms. My mission is to create user experiences that align with clients' goals, 
+              enhancing website usability and crafting intuitive mobile app interfaces.</p>
 
           </div>
         </div>
