--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
         </a>
     
         <!-- GitHub Link -->
-        <a href="https://github.com/yourgithubusername" target="_blank">
+        <a href="https://github.com/hari-unnikrishnan" target="_blank">
             <i class="bi bi-github"></i>
         </a>
       </div>
