--- a/index.html
+++ b/index.html
@@ -410,6 +410,40 @@
             </div><!-- End Portfolio Item -->
 
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product"></div>
+              <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=6-408&t=HOmRDZR6jKK44mn4-1"
+                title="More Details" class="details-link"><i class="">
+                  <div class="portfolio-content h-100">
+                    <img src="assets/img/portfolio/Group 3.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                      <h4>Login page</h4>
+                      <p> login page design features a sleek dark-themed background with geometric patterns, a centered login box with subtle borders,
+                         and vibrant red accents for the logo and buttons, creating a modern and professional look.</p>
+
+
+                    </div>
+
+                  </div>
+              </a>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books"></div>
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/Group%203.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Login page design</h4>
+                  <p>login page design features a sleek dark-themed background with geometric patterns, a centered login
+                    box with subtle borders,
+                    and vibrant red accents for the logo and buttons, creating a modern and professional look.</p>
+                  <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=6-408&t=52RRi3A0f5C08cvn-1"
+                    title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
+                      class="bi bi-zoom-in"></i></a>
+                  <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=6-408&t=52RRi3A0f5C08cvn-1"
+                    title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
