--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@
                     professional look</p>
                    
                   <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=6-408&t=52RRi3A0f5C08cvn-1"
-                  " title="Branding 3" data-gallery="portfolio-gallery-book"
+                   title="Branding 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=6-408&t=52RRi3A0f5C08cvn-1"
-                  " title="More Details" class="details-link"><i
+                   title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div> 
