--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
               </a>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=6-408&t=52RRi3A0f5C08cvn-1"
-                title="More Details" class=""><i class="">
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+                <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=6-408&t=52RRi3A0f5C08cvn-1"
+                   title="More Details" class="">
 
                   <div class="portfolio-content h-100">
                     <img src="assets/img/portfolio/Group%203.jpg" class="img-fluid" alt="">
@@ -423,8 +423,8 @@
                         professional look</p>
                     </div>
                   </div>
-              </a>
-            </div><!-- End Portfolio Item -->
+                </a>
+              </div><!-- End Portfolio Item -->
 
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
