--- a/index.html
+++ b/index.html
@@ -409,22 +409,21 @@
               </a>
             </div><!-- End Portfolio Item -->
 
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                  <img src="assets/img/portfolio/Group%203.jpg" class="img-fluid" alt="Portfolio Image">
-                  <a href="assets/vendor/page/login-animation%20.html" title="More Details" class="details-link">
-                      <i class="icon-details"></i> <!-- Add appropriate icon class -->
-                      <div class="portfolio-info">
-                          <h4>Login page design</h4>
-                          <p>
-                              Login page design features a sleek dark-themed background with geometric patterns,
-                              a centered login box with subtle borders, and vibrant red accents for the logo and buttons,
-                              creating a modern and professional look.
-                          </p>
-                      </div>
-                  </a>
-              </div>
-          </div><!-- End Portfolio Item -->
+             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+                <a href="https://www.figma.com/design/363xyVdjoN0532t07OxSpJ/Untitled?node-id=27-2&t=MCcMDz2v7RU902Pr-1"
+                   title="More Details" class="">
+                  <div class="portfolio-content h-100">
+                    <img src="assets/img/portfolio/Group%203.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                      <h4>Login page design</h4>
+                      <p>login page design features a sleek dark-themed background with geometric patterns, a centered
+                        login
+                        box with subtle borders, and vibrant red accents for the logo and buttons, creating a modern and
+                        professional look</p>
+                    </div>
+                  </div>
+                </a>
+              </div><!-- End Portfolio Item -->
               
               <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: absolute;left: 902.974px;top: 1078.05px;">
                 <a href="assets/vendor/index.html"
