--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               </a>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">\
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <a href="https://www.figma.com/design/6grydMZUYw3cmthbmYC5qP/NEW?node-id=31-99&t=NVd30JqiDtszuMsS-1"
                 title="Product 2" data-gallery="portfolio-gallery-product" class="">
                 <div class="portfolio-content h-100">
