--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
               </div><!-- End Portfolio Item -->
               
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: relative;">
-                <a href="assets/vendor/index.html" 
+                <a href="assets/vendor/food%20page/index.html" 
                   title="More Details" class="portfolio-link">
                     <div class="portfolio-content h-100">
                         <img src="assets/img/portfolio/Group 81.jpg" class="img-fluid" alt="Traditional Kerala Dishes">
