--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <a href="https://www.figma.com/design/N912KXEKO5ggV7806Sgfm9/Sale-Man?node-id=0-1&t=7LbzQYhYcxuap9tQ-1"
                 title="Branding 2" data-gallery="portfolio-gallery-book" class="">
-                <div class="portfolio-content h-100">
+                <div class="last-img portfolio-content h-100">
                   <img src="assets/img/portfolio/Group%2051.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Sale Man</h4>
