--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               </a>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <a href="https://www.figma.com/design/C8SQo41nPcXxl2oGggiYBy/Parking-App-Design?node-id=201-1100&t=lt9duGCvqbnCAee5-1"
                 title="More Details" class="details-link"><i class="">
                   <div class="portfolio-content h-100">
@@ -381,7 +381,7 @@
 
                   </div>
               </a>
-            </div><!-- End Portfolio Item -->
+            </div> End Portfolio Item  -->
 
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
                   <div class="portfolio-content h-100">
