--- a/index.html
+++ b/index.html
@@ -367,21 +367,19 @@
               </a>
             </div><!-- End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <a href="https://www.figma.com/design/C8SQo41nPcXxl2oGggiYBy/Parking-App-Design?node-id=201-1100&t=lt9duGCvqbnCAee5-1"
-                title="More Details" class="details-link"><i class="">
-                  <div class="portfolio-content h-100">
-                    <img src="assets/img/portfolio/Group%201000006540.jpg" class="img-fluid" alt="">
-                    <div class="portfolio-info">
-                      <h4>Parking App Design</h4>
-                      <p>Users can view available parking spaces in real-time, ensuring they find a spot quickly.</p>
-
-
-                    </div>
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/img1" class="img-fluid" alt="">
+                <a href="assets/vendor/page/Humans%20.Emotional/index.html" title="More Details" class="details-link">
+                  <div class="portfolio-info">
+                    
+                    <h4>Humans Emotional</h4>
+                    <p>Every interaction is an opportunity to connect on a deeper, emotional level.</p>
+                  </div>
 
                   </div>
               </a>
-            </div> End Portfolio Item  -->
+            </div><!-- End Portfolio Item--> 
 
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
                   <div class="portfolio-content h-100">
