--- a/index.html
+++ b/index.html
@@ -369,17 +369,17 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/img1" class="img-fluid" alt="">
-                <a href="assets/vendor/page/Humans%20.Emotional/index.html" title="More Details" class="details-link">
+                <img src="assets/img/portfolio/img1.jpg" class="img-fluid" alt="">
+                  <a href="assets/vendor/Humans%20.Emotional/Emotional.html" title="More Details" class="details-link">
                   <div class="portfolio-info">
-                    
-                    <h4>Humans Emotional</h4>
-                    <p>Every interaction is an opportunity to connect on a deeper, emotional level.</p>
+                    <h4>Login Page Design</h4>
+                    <p>This login page design features a sleek dark-themed background with geometric patterns, a centered login
+                      box with subtle borders, and vibrant red accents for the logo and buttons, creating a modern and professional look.</p>
                   </div>
-
-                  </div>
-              </a>
-            </div><!-- End Portfolio Item--> 
+                </a>
+              </div>
+            </div>
+            <!-- End Portfolio Item--> 
 
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
                   <div class="portfolio-content h-100">
