--- a/index.html
+++ b/index.html
@@ -430,6 +430,21 @@
             </div><!-- End Portfolio Item -->
              
 
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: relative;">
+              <a href="assets/vendor/car%20repair/car.html" 
+                title="More Details" class="portfolio-link">
+                  <div class="portfolio-content h-100">
+                      <img src="assets/img/portfolio/img2.jpg" class="img-fluid" alt="Traditional Kerala Dishes">
+                      <div class="portfolio-info">
+                          <h4> car repair </h4>
+                          <p>Car repair involves diagnosing, fixing, and maintaining vehicle components
+                             to ensure optimal performance and safety on the road."</p>
+                      </div>
+                  </div>
+              </a>
+          </div><!-- End Portfolio Item -->  
+
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
