--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@
 
             
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <a href="https://www.figma.com/design/WEWGvquU1yigcpVLJdxNYu/Travel-Website?node-id=1-1553&t=7LbzQYhYcxuap9tQ-1"
-                title="App 3" data-gallery="portfolio-gallery-app" class="">
-                <div class="portfolio-content h-100">
-                  <img src="assets/img/portfolio/Group%2060.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: relative;">
+              <a href="assets/vendor/car%20repair/car.html" 
+                title="More Details" class="portfolio-link">
+                  <div class="portfolio-content h-100">
+                      <img src="assets/img/portfolio/img2.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Travel Website</h4>
                     <p>user-friendly features, expert travel tips, and a vibrant community of fellow travelers, we’re
