--- a/index.html
+++ b/index.html
@@ -368,9 +368,8 @@
                 <img src="assets/img/portfolio/img1.jpg" class="img-fluid" alt="">
                   <a href="assets/vendor/Humans%20.Emotional/Emotional.html" title="More Details" class="details-link">
                   <div class="portfolio-info">
-                    <h4>Login Page Design</h4>
-                    <p>This login page design features a sleek dark-themed background with geometric patterns, a centered login
-                      box with subtle borders, and vibrant red accents for the logo and buttons, creating a modern and professional look.</p>
+                    <h4>Humans .Emotional</h4>
+                    <p>Emotions are the heartbeats of human experience, shaping our thoughts, actions, and connections in ways that define who we are.</p>
                   </div>
                 </a>
               </div>
@@ -425,11 +424,7 @@
               </a>
             </div><!-- End Portfolio Item -->
              
-
-
-          
-
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+           <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
