--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@
 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: relative;">
-              <a href="assets/vendor//Cycle/cycleindex.html" 
+              <a href="assets/vendor//Cycle/bycycl
+              e.html" 
                 title="More Details" class="portfolio-link">
                   <div class="portfolio-content h-100">
                       <img src="assets/img/portfolio/cycle web page.jpg" class="img-fluid" alt="Traditional Kerala Dishes">
