--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p>I am proficient in leading design tools such as Adobe XD, Sketch, and Figma, with a
               dedication to ongoing learning. I explore innovative techniques to stay at the
               forefront of UI/UX trends. Specializing in crafting immersive digital experiences,
-              I seamlessly integrate front-end development using HTML, CSS, and JavaScript. I design
+              I seamlessly integrate front-end development using HTML, CSS, Bootstrap and JavaScript. I design
               interfaces that captivate and delight users, ensuring seamless interactions across
               platforms. My mission is to create user experiences that align with clients' goals,
               enhancing website usability and crafting intuitive mobile app interfaces.</p>
@@ -169,7 +169,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
               <h4 class="title">Web Development</h4>
-              <p class="description">I specialize in front-end development using HTML, CSS, and JavaScript,
+              <p class="description">I specialize in front-end development using HTML, CSS, Bootstrap and JavaScript,
                 delivering tailored solutions that prioritize innovation and client satisfaction, ensuring
                 seamless functionality and captivating user experiences to bring your digital vision to life.</p>
               <a href="service-details.html" class="readmore stretched-link"><span></span><i class=""></i></a>
@@ -229,7 +229,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
         <p>my portfolio! Here, you’ll find a curated selection of my projects that demonstrate my skills and
-          versatility in UI/UX design. Each project reflects my commitment to creating seamless user experiences
+          versatility in UI/UX design,Web development,Web Design. Each project reflects my commitment to creating seamless user experiences
           and my ability to align designs with client objectives.</p>
       </div><!-- End Section Title -->
 
@@ -450,7 +450,7 @@
                     </div>
                 </div>
             </a>
-        </div><!-- End Portfolio Item -->    
+          </div><!-- End Portfolio Item -->    
              
            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
