--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Harikrishnan <br></h2>
-        <p>I'm <span class="typed" data-typed-items="UI Designer,UX Designer,Web Designer,Web Developer ">UI/UX Designer
+        <p>I'm <span class="typed" data-typed-items="UI Designer,UX Designer,Web Designer,Web Developer ">UI/UX Developer
             & Web
             Designer</span></p>
         <div class="social-links">
@@ -111,13 +111,11 @@
           </div>
           <div class="col-lg-7 content">
             <h2>About Me</h2>
-            <p>I am proficient in leading design tools such as Adobe XD, Sketch, and Figma, with a
-              dedication to ongoing learning. I explore innovative techniques to stay at the
-              forefront of UI/UX trends. Specializing in crafting immersive digital experiences,
-              I seamlessly integrate front-end development using HTML, CSS, Bootstrap and JavaScript. I design
-              interfaces that captivate and delight users, ensuring seamless interactions across
-              platforms. My mission is to create user experiences that align with clients' goals,
-              enhancing website usability and crafting intuitive mobile app interfaces.</p>
+            <p>I am a proficient UI/UX Developer skilled in leading design tools such as Adobe XD, Sketch, and Figma, with a strong commitment to continuous learning and innovation. 
+              I explore cutting-edge techniques to stay at the forefront of UI/UX trends.
+              With expertise in HTML, CSS, Bootstrap, and JavaScript, I specialize in crafting immersive digital experiences that seamlessly blend design and functionality.
+               I create interfaces that captivate users and ensure intuitive, seamless interactions across platforms.
+              My mission is to design user experiences that align with clients' goals, enhance website usability, and deliver intuitive mobile app interfaces that drive engagement and satisfaction.</p>
 
           </div>
         </div>
@@ -145,11 +143,11 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title">UI/UX Design</h4>
-              <p class="description">I design seamlessly blends functionality and aesthetics,
-                ensuring intuitive user interactions. With meticulous attention to detail, I
-                deliver prototypes and wireframes that bring your vision to life. Let's collaborate to
-                create captivating UI/UX solutions that drive success for your business.</p>
+              <h4 class="title">UI/UX developer</h4>
+              <p class="description">I design interfaces that seamlessly blend functionality and aesthetics, ensuring intuitive
+                 and engaging user interactions. With meticulous attention to detail, I create prototypes and wireframes that 
+                 bring your vision to life. Let’s collaborate to craft captivating UI/UX solutions that drive success and 
+                 elevate your business.</p>
               <a href="service-details.html" class="readmore stretched-link"><span></span><i class=""></i></a>
             </div>
           </div>
