--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Harikrishnan <br></h2>
-        <p>I'm <span class="typed" data-typed-items="UI Designer,UX Designer,Web Designer,Web Developer ">UI/UX Developer
+        <p>I'm <span class="typed" data-typed-items="UI Developer,UX Developer,  Website Designing & Development,Web Designer,Web Developer ">UI/UX Developer
             & Web
             Designer</span></p>
         <div class="social-links">
