--- a/index.html
+++ b/index.html
@@ -309,7 +309,10 @@
 						<div class="progress">
 							<div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:50%">
-								<span>50%</span>
+								<span style=" 
+    top: -38px;
+    right: -167px;
+  ">50%</span>
 							</div>
 						</div>
 					</div>
