--- a/index.html
+++ b/index.html
@@ -309,10 +309,8 @@
 						<div class="progress">
 							<div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:50%">
-								<span style=" 
-    top: -38px;
-    right: -167px;
-  ">50%</span>
+							<span style="position: absolute; top: -38px; right: -167px;">50%</span>
+
 							</div>
 						</div>
 					</div>
