--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 						<h3>Python Django and Flask</h3>
 						<div class="progress">
 							<div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-								aria-valuemax="100" style="width:69git add .%">
+								aria-valuemax="100" style="width:69%">
 							<span >50%</span>
 `
 							</div>
