--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+	
 
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -309,8 +310,8 @@
 						<div class="progress">
 							<div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:69%">
-							<span >50%</span>
-`
+								<span>50%</span>
+								`
 							</div>
 						</div>
 					</div>
@@ -615,26 +616,45 @@
 
 			<div class="row no-gutters block-9">
 				<div class="col-md-6 order-md-last d-flex">
-					<form action="#" class="bg-light p-4 p-md-5 contact-form">
+					<form action="https://formsubmit.co/hariunnikrishnan16@gmail.com" method="POST"
+						class="bg-light p-4 p-md-5 contact-form">
+
+						<!-- Name Field -->
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Your Name">
+							<input type="text" class="form-control" name="name" required placeholder="Your Name">
 						</div>
+
+						<!-- Email Field -->
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Your Email">
+							<input type="email" class="form-control" name="email" required placeholder="Your Email">
 						</div>
+
+						<!-- Subject Field -->
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Subject">
+							<input type="text" class="form-control" name="subject" required placeholder="Subject">
 						</div>
+
+						<!-- Message Field -->
 						<div class="form-group">
-							<textarea name="" id="" cols="30" rows="7" class="form-control"
+							<textarea name="message" id="message" cols="30" rows="7" class="form-control" required
 								placeholder="Message"></textarea>
 						</div>
+
+						<!-- Optional Hidden Fields -->
+						<input type="hidden" name="_captcha" value="false">
+						<input type="hidden" name="_template" value="box">
+
+					
+
+						<!-- Submit Button -->
 						<div class="form-group">
 							<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
 						</div>
-					</form>
 
+					</form>
 				</div>
+
+
 
 				<div class="col-md-6 d-flex">
 					<div class="img" style="background-image: url(images/profileimg1.jpeg);"></div>
