--- a/index.html
+++ b/index.html
@@ -643,6 +643,8 @@
 						<!-- Optional Hidden Fields -->
 						<input type="hidden" name="_captcha" value="false">
 						<input type="hidden" name="_template" value="box">
+						<input type="hidden" name="_next" value="/forms/contact/thank-you.html">
+
 
 					
 
@@ -726,16 +728,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12 text-center">
-
-					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						<!-- &copy;
-						<script>document.write(new Date().getFullYear());</script> 
-					 <i class="icon-heart color-danger" aria-hidden="true"></i>  <a
-							href="https://colorlib.com" target="_blank"></a> -->
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					</p>
-				</div>
+				
 			</div>
 		</div>
 	</footer>
