--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 						<!-- Optional Hidden Fields -->
 						<input type="hidden" name="_captcha" value="false">
 						<input type="hidden" name="_template" value="box">
-						<input type="hidden" name="_next" value="/forms/contact/thank-you.html">
+						<input type="hidden" name="_next" value=" https://hari-unnikrishnan.github.io/forms/contact/thank-you.html">
 
 
 					
