--- a/index.html
+++ b/index.html
@@ -543,6 +543,61 @@
 					</div>
 				</div>
 
+
+					<div class="col-md-8">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/login.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a
+									href="vendor/loginpage/index.html">login page</a></h3>
+							<span>Log in with your username and password to access your account.</span>
+						</div>
+					</div>
+
+					<!-- <div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/cycle\ web\ page.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="vendor/Cycle/bycycle.html">cycle web page</a></h3>
+
+							<span>Discover the perfect cycle for your journey – Built for speed, comfort, and adventure.
+								Experience the ultimate ride with lightweight, durable cycles designed for adventure,
+								comfort, and style.</span>
+						</div>
+					</div> -->
+				</div>
+
+				<!-- <div class="col-md-4">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/img4\ -\ Copy.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="vendor/kitezz-html/kitezz.html">Kitezz sweets</a>
+									</h3>
+									<span>Kitezz is a modern web design concept that combines minimalism, functionality,
+										and stunning visuals to create captivating, user-friendly websites.</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/img4.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="vendor/bakery/index.html">Food</a>
+									</h3>
+									<span>Welcome to Sweet Bakery, where we bake happiness with quality, teamwork, and
+										passion in every bite..</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div> -->
+
+
 			</div>
 
 		</div>
@@ -758,6 +813,10 @@
 
 	<script src="js/main.js"></script>
 
+
+
+
+ 
 </body>
 
 </html>
