--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-	
+
 
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -424,11 +424,10 @@
 								</div>
 							</div>
 						</div>
+		
 					</div>
 				</div>
 				<!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
-
-
 				<div class="col-md-8">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/Group\ 3.jpg);">
@@ -544,13 +543,12 @@
 				</div>
 
 
-					<div class="col-md-8">
+				<div class="col-md-8">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/login.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a
-									href="vendor/loginpage/index.html">login page</a></h3>
+							<h3><a href="vendor/loginpage/index.html">login page</a></h3>
 							<span>Log in with your username and password to access your account.</span>
 						</div>
 					</div>
@@ -568,21 +566,21 @@
 					</div> -->
 				</div>
 
-				<!-- <div class="col-md-4">
+				<div class="col-md-4">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img4\ -\ Copy.jpg);">
+								style="background-image: url(images/Biosynthesis.png);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="vendor/kitezz-html/kitezz.html">Kitezz sweets</a>
+									<h3><a href="https://hari-unnikrishnan.github.io/Biosynthesis/">Cultivating Next-Gen Growth in Agriculture</a>
 									</h3>
-									<span>Kitezz is a modern web design concept that combines minimalism, functionality,
-										and stunning visuals to create captivating, user-friendly websites.</span>
+									<span>We are cultivating next-gen growth in agriculture by integrating innovative technologies, sustainable practices,
+										 and smart farming solutions to ensure a greener, more productive future</span>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<!-- <div class="col-md-12">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 								style="background-image: url(images/img4.png);">
 								<div class="overlay"></div>
@@ -593,9 +591,9 @@
 										passion in every bite..</span>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
-				</div> -->
+				</div>
 
 
 			</div>
@@ -698,10 +696,11 @@
 						<!-- Optional Hidden Fields -->
 						<input type="hidden" name="_captcha" value="false">
 						<input type="hidden" name="_template" value="box">
-						<input type="hidden" name="_next" value=" https://hari-unnikrishnan.github.io/forms/contact/thank-you.html">
+						<input type="hidden" name="_next"
+							value=" https://hari-unnikrishnan.github.io/forms/contact/thank-you.html">
 
 
-					
+
 
 						<!-- Submit Button -->
 						<div class="form-group">
@@ -783,7 +782,7 @@
 				</div>
 			</div>
 			<div class="row">
-				
+
 			</div>
 		</div>
 	</footer>
@@ -816,7 +815,7 @@
 
 
 
- 
+
 </body>
 
 </html>
